--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Chenming Zhou"
+  email            : "zhoucm@nuaa.edu.cn" 
 
   # Academic websites
   academia         : # URL
